<resources>
    <string name="app_name">Paint R</string>
    <string name="reset_menu_caps">RESET</string>
    <string name="undo_menu_caps">UNDO</string>
    <string name="redo_menu_caps">REDO</string>
    <string name="color_menu_caps">COLOR</string>
    <string name="save_menu_caps">SAVE</string>
    <string name="open_menu_caps">OPEN</string>
    <string name="share_menu_caps">SHARE</string>
    <string name="brush_menu_caps">BRUSH</string>

    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_black">Black</string>
    <string name="color_orange">Orange</string>
    <string name="color_brown">Brown</string>

    <string name="brush_size_10">10</string>
    <string name="brush_size_12">12</string>
    <string name="brush_size_14">14</string>
    <string name="brush_size_16">16</string>
    <string name="brush_size_18">18</string>
    <string name="brush_size_20">20</string>
    <string name="brush_size_24">24</string>

    <string name="picture_select">Please select an image: </string>
</resources>
