<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/openCanvas"
        android:title="@string/open_menu_caps" />
    <item
        android:id="@+id/saveCanvas"
        android:title="@string/save_menu_caps" />

    <item
        android:id="@+id/shareCanvas"
        android:title="@string/share_menu_caps"
        android:icon="@drawable/ic_share_black_24dp" />

    <item
        android:id="@+id/colorCanvas"
        android:title="@string/color_menu_caps"
        android:icon="@drawable/ic_color_lens_black_24dp"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/colorRed"
                android:title="@string/color_red" />
            <item
                android:id="@+id/colorGreen"
                android:title="@string/color_green" />
            <item
                android:id="@+id/colorBlack"
                android:title="@string/color_black" />
            <item
                android:id="@+id/colorOrange"
                android:title="@string/color_orange" />
            <item
                android:id="@+id/colorBrown"
                android:title="@string/color_brown" />
        </menu>
    </item>

    <item
        android:id="@+id/resetCanvas"
        android:title="@string/reset_menu_caps" />

    <item
        android:id="@+id/undoCanvas"
        android:title="@string/undo_menu_caps"
        android:icon="@drawable/ic_undo_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/redoCanvas"
        android:title="@string/redo_menu_caps"
        android:icon="@drawable/ic_redo_black_24dp"
        app:showAsAction="always" />
</menu>